(bugfix): make k8s 1.25 validation logic check api group before issuing a warning (#274)
* fix a bug in k8s 1.25 validation logic

to now check the apiGroup/resource to determine if an api is deprecated.

Signed-off-by: Bryce Palmer <bpalmer@redhat.com>

* update warning and error checks to use a map

Signed-off-by: Bryce Palmer <bpalmer@redhat.com>

Signed-off-by: Bryce Palmer <bpalmer@redhat.com>
Upstream-repository: api
Upstream-commit: f1b729684854a053f229464eb327527222188fd1

--- a/staging/api/pkg/validation/internal/testdata/deprecated_api_1_25/memcached-operator.clusterserviceversion.yaml
+++ b/staging/api/pkg/validation/internal/testdata/deprecated_api_1_25/memcached-operator.clusterserviceversion.yaml
@@ -94,6 +94,12 @@ spec:
           - subjectaccessreviews
           verbs:
           - create
+        - apiGroups:
+          - batch
+          resources:
+          - cronjobs
+          verbs:
+          - get
         serviceAccountName: memcached-operator-controller-manager
       deployments:
       - name: memcached-operator-controller-manager
@@ -177,9 +183,38 @@ spec:
           - patch
           - delete
         - apiGroups:
-          - ""
+          - events.k8s.io
           resources:
           - events
+          verbs:
+          - create
+          - patch
+        - apiGroups:
+          - discovery.k8s.io
+          resources:
+          - endpointslices
+          verbs:
+          - create
+          - patch
+        - apiGroups:
+          - autoscaling
+          resources:
+          - horizontalpodautoscalers
+          verbs:
+          - create
+          - patch
+        - apiGroups:
+          - policy
+          resources:
+          - poddisruptionbudgets
+          - podsecuritypolicies
+          verbs:
+          - create
+          - patch
+        - apiGroups:
+          - node.k8s.io
+          resources:
+          - runtimeclasses
           verbs:
           - create
           - patch
