Improve ClusterServiceVersion schema. (#168)
Add descriptions for kind, name, and version properties of APIResourceReference type as well as DisplayName, Description, Keywords, Maintainers, Provider, Links, and Icon properties of ClusterServiceVersionSpec.

Upstream-repository: api
Upstream-commit: 36145b1ddd99eddbba6f6439a7aa896ccac68346

--- a/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
+++ b/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
@@ -121,7 +121,7 @@ spec:
                           resources:
                             type: array
                             items:
-                              description: APIResourceReference is a Kubernetes resource type used by a custom resource
+                              description: APIResourceReference is a reference to a Kubernetes resource type that the referrer utilizes.
                               type: object
                               required:
                                 - kind
@@ -129,10 +129,13 @@ spec:
                                 - version
                               properties:
                                 kind:
+                                  description: Kind of the referenced resource type.
                                   type: string
                                 name:
+                                  description: Plural name of the referenced resource type (CustomResourceDefinition.Spec.Names[].Plural). Empty string if the referenced resource type is not a custom resource.
                                   type: string
                                 version:
+                                  description: API Version of the referenced resource type.
                                   type: string
                           specDescriptors:
                             type: array
@@ -231,7 +234,7 @@ spec:
                           resources:
                             type: array
                             items:
-                              description: APIResourceReference is a Kubernetes resource type used by a custom resource
+                              description: APIResourceReference is a reference to a Kubernetes resource type that the referrer utilizes.
                               type: object
                               required:
                                 - kind
@@ -239,10 +242,13 @@ spec:
                                 - version
                               properties:
                                 kind:
+                                  description: Kind of the referenced resource type.
                                   type: string
                                 name:
+                                  description: Plural name of the referenced resource type (CustomResourceDefinition.Spec.Names[].Plural). Empty string if the referenced resource type is not a custom resource.
                                   type: string
                                 version:
+                                  description: API Version of the referenced resource type.
                                   type: string
                           specDescriptors:
                             type: array
@@ -345,7 +351,7 @@ spec:
                           resources:
                             type: array
                             items:
-                              description: APIResourceReference is a Kubernetes resource type used by a custom resource
+                              description: APIResourceReference is a reference to a Kubernetes resource type that the referrer utilizes.
                               type: object
                               required:
                                 - kind
@@ -353,10 +359,13 @@ spec:
                                 - version
                               properties:
                                 kind:
+                                  description: Kind of the referenced resource type.
                                   type: string
                                 name:
+                                  description: Plural name of the referenced resource type (CustomResourceDefinition.Spec.Names[].Plural). Empty string if the referenced resource type is not a custom resource.
                                   type: string
                                 version:
+                                  description: API Version of the referenced resource type.
                                   type: string
                           specDescriptors:
                             type: array
@@ -447,7 +456,7 @@ spec:
                           resources:
                             type: array
                             items:
-                              description: APIResourceReference is a Kubernetes resource type used by a custom resource
+                              description: APIResourceReference is a reference to a Kubernetes resource type that the referrer utilizes.
                               type: object
                               required:
                                 - kind
@@ -455,10 +464,13 @@ spec:
                                 - version
                               properties:
                                 kind:
+                                  description: Kind of the referenced resource type.
                                   type: string
                                 name:
+                                  description: Plural name of the referenced resource type (CustomResourceDefinition.Spec.Names[].Plural). Empty string if the referenced resource type is not a custom resource.
                                   type: string
                                 version:
+                                  description: API Version of the referenced resource type.
                                   type: string
                           specDescriptors:
                             type: array
@@ -507,10 +519,13 @@ spec:
                           version:
                             type: string
                 description:
+                  description: Description of the operator. Can include the features, limitations or use-cases of the operator.
                   type: string
                 displayName:
+                  description: The name of the operator in display format.
                   type: string
                 icon:
+                  description: The icon for this operator.
                   type: array
                   items:
                     type: object
@@ -4910,6 +4925,7 @@ spec:
                         description: InstallModeType is a supported type of install mode for CSV installation
                         type: string
                 keywords:
+                  description: A list of keywords describing the operator.
                   type: array
                   items:
                     type: string
@@ -4919,6 +4935,7 @@ spec:
                   additionalProperties:
                     type: string
                 links:
+                  description: A list of links related to the operator.
                   type: array
                   items:
                     type: object
@@ -4928,6 +4945,7 @@ spec:
                       url:
                         type: string
                 maintainers:
+                  description: A list of organizational entities maintaining the operator.
                   type: array
                   items:
                     type: object
@@ -4957,6 +4975,7 @@ spec:
                       version:
                         type: string
                 provider:
+                  description: The publishing entity behind the operator.
                   type: object
                   properties:
                     name:
