Adds codecov integration (#285)
Signed-off-by: Mikalai Radchuk <mradchuk@redhat.com>
Upstream-repository: api
Upstream-commit: bbac5028af81cc0cb4604f4a4b2283d225828cbe

--- a/staging/api/.github/workflows/go.yaml
+++ b/staging/api/.github/workflows/go.yaml
@@ -29,7 +29,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     - name: unit-test
-      run: go test -v ./...
+      run: go test -v ./... -coverprofile cover.out
+    - uses: codecov/codecov-action@v3
+      with:
+        files: cover.out
+        fail_ci_if_error: true
+        functionalities: fixes
 
   go-apidiff:
     name: go-apidiff
