--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -5,7 +5,7 @@ metadata:
   name: packageserver
   namespace: openshift-operator-lifecycle-manager
   labels:
-    olm.version: 0.19.0
+    olm.version: 0.0.0-c0ff8256acdd48c68b07e8c46376ef6ff28d218a
     olm.clusteroperator.name: operator-lifecycle-manager-packageserver
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
@@ -159,7 +159,7 @@ spec:
                                 - packageserver
                         topologyKey: "kubernetes.io/hostname"
   maturity: alpha
-  version: 0.19.0
+  version: 0.0.0-c0ff8256acdd48c68b07e8c46376ef6ff28d218a
   apiservicedefinitions:
     owned:
       - group: packages.operators.coreos.com
