--- a/staging/api/pkg/validation/internal/testdata/correct.csv.empty.example.yaml
+++ b/staging/api/pkg/validation/internal/testdata/correct.csv.empty.example.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     "alm-examples": ""
 spec:
+  minKubeVersion: 1.21.0
   version: 0.9.0
   installModes:
   - type: AllNamespaces
