--- a/staging/api/pkg/validation/internal/testdata/invalid.alm-examples.csv.yaml
+++ b/staging/api/pkg/validation/internal/testdata/invalid.alm-examples.csv.yaml
@@ -7,6 +7,7 @@ metadata:
   name: test-operator.v0.0.1
   namespace: placeholder
 spec:
+  minKubeVersion: 1.21.0
   displayName: test-operator
   install:
     strategy: deployment
