manifests: add $GOMEMLIMIT to PSM
This component has inuse_space around 3MiB in the wild.

Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/manifests/0000_50_olm_06-psm-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_06-psm-operator.deployment.ibm-cloud-managed.yaml
@@ -58,10 +58,12 @@ spec:
               value: 5m
             - name: RELEASE_VERSION
               value: "0.0.1-snapshot"
+            - name: GOMEMLIMIT
+              value: "5MiB"
           resources:
             requests:
               cpu: 10m
-              memory: 50Mi
+              memory: 10Mi
           livenessProbe:
             httpGet:
               path: /healthz
