OCPBUGS-17950: Increase packageserver wakeup interval to 24h
The packageserver wakeup interval is used to update its package
manifest from CatSrcs. However, this does not need to happen
periodically (especially 5m) as the CatSrc pods will restart
when a change occurs to data it is caching, and this will be
acted upon by packageserver.

Signed-off-by: Todd Short <todd.short@me.com>

--- a/values.yaml
+++ b/values.yaml
@@ -82,6 +82,7 @@ package:
     pullPolicy: IfNotPresent
   service:
     internalPort: 5443
+  commandArgs: "--interval 24h"
   nodeSelector:
     kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
