--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -121,6 +121,7 @@ spec:
                       - "5443"
                       - --global-namespace
                       - openshift-marketplace
+                      - --interval 24h
                     image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
                     imagePullPolicy: IfNotPresent
                     ports:
