feat: add annotations for capabilities feature
adding annotation for capabilities to all manifest resources, this will allow users to make OLM an optional install

Signed-off-by: ehila <ehila@redhat.com>

fix: update generate manifests script

Signed-off-by: ehila <ehila@redhat.com>

--- a/manifests/0000_50_olm_00-catalogsources.crd.yaml
+++ b/manifests/0000_50_olm_00-catalogsources.crd.yaml
@@ -5,6 +5,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.8.0
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   creationTimestamp: null
   name: catalogsources.operators.coreos.com
 spec:
