--- a/manifests/0000_50_olm_00-pprof-rbac.yaml
+++ b/manifests/0000_50_olm_00-pprof-rbac.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: collect-profiles
   namespace: openshift-operator-lifecycle-manager
 rules:
@@ -20,6 +21,7 @@ metadata:
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: collect-profiles
   namespace: openshift-operator-lifecycle-manager
 subjects:
@@ -37,5 +39,6 @@ metadata:
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: collect-profiles
   namespace: openshift-operator-lifecycle-manager
