--- a/manifests/0000_50_olm_00-pprof-secret.yaml
+++ b/manifests/0000_50_olm_00-pprof-secret.yaml
@@ -5,6 +5,7 @@ metadata:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: pprof-cert
   namespace: openshift-operator-lifecycle-manager
 type: kubernetes.io/tls
