--- a/manifests/0000_50_olm_02-olmconfig.yaml
+++ b/manifests/0000_50_olm_02-olmconfig.yaml
@@ -6,3 +6,4 @@ metadata:
     release.openshift.io/create-only: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
