--- a/manifests/0000_50_olm_11-olm-operators.configmap.removed.yaml
+++ b/manifests/0000_50_olm_11-olm-operators.configmap.removed.yaml
@@ -7,3 +7,4 @@ metadata:
     release.openshift.io/delete: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
