--- a/manifests/0000_50_olm_15-csv-viewer.rbac.yaml
+++ b/manifests/0000_50_olm_15-csv-viewer.rbac.yaml
@@ -5,6 +5,7 @@ metadata:
     rbac.authorization.kubernetes.io/autoupdate: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: copied-csv-viewer
   namespace: openshift
 rules:
@@ -24,6 +25,7 @@ metadata:
     rbac.authorization.kubernetes.io/autoupdate: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    capability.openshift.io/name: "OperatorLifecycleManager"
   name: copied-csv-viewers
   namespace: openshift
 roleRef:
