--- a/manifests/0000_50_olm_00-olmconfigs.crd.yaml
+++ b/manifests/0000_50_olm_00-olmconfigs.crd.yaml
@@ -45,6 +45,9 @@ spec:
                     disableCopiedCSVs:
                       description: DisableCopiedCSVs is used to disable OLM's "Copied CSV" feature for operators installed at the cluster scope, where a cluster scoped operator is one that has been installed in an OperatorGroup that targets all namespaces. When reenabled, OLM will recreate the "Copied CSVs" for each cluster scoped operator.
                       type: boolean
+                    packageServerWakeupInterval:
+                      description: PackageServerWakeupInterval is used to define the PackageServerWakeupInterval for packagerservers
+                      type: string
             status:
               description: OLMConfigStatus is the status for an OLMConfig resource.
               type: object
