UPSTREAM: <carry>: more SCC RBAC
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/manifests/0000_50_olm_01-olm-operator.serviceaccount.yaml
+++ b/manifests/0000_50_olm_01-olm-operator.serviceaccount.yaml
@@ -28,6 +28,7 @@ rules:
       - securitycontextconstraints
     resourceNames:
       - restricted-v2
+      - anyuid
     verbs:
       - use
 ---
