--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -87,6 +87,7 @@ spec:
                   app: packageserver
                 annotations:
                   target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
+                  openshift.io/required-scc: restricted-v2
                 creationTimestamp: null
               spec:
                 securityContext:
