--- a/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
+++ b/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
@@ -97,7 +97,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -153,7 +153,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -175,7 +175,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -210,7 +210,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -266,7 +266,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -288,7 +288,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -334,7 +334,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -383,7 +383,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -405,7 +405,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -439,7 +439,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -488,7 +488,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -510,7 +510,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
