--- a/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
+++ b/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
@@ -98,7 +98,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -154,7 +154,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -176,7 +176,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -211,7 +211,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -267,7 +267,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -289,7 +289,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -335,7 +335,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -384,7 +384,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -406,7 +406,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -440,7 +440,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -489,7 +489,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
@@ -511,7 +511,7 @@ spec:
                                 path:
                                   type: string
                                 value:
-                                  description: RawMessage is a raw encoded JSON value. It implements [Marshaler] and [Unmarshaler] and can be used to delay JSON decoding or precompute a JSON encoding.
+                                  description: RawMessage is a raw encoded JSON value. It implements Marshaler and Unmarshaler and can be used to delay JSON decoding or precompute a JSON encoding.
                                   type: string
                                   format: byte
                                 x-descriptors:
